2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added ChangingDefinitionsCauseMeasure* tests.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added WhereIsGridLinesRendererCreated* tests.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Expanded ShowGridLines test.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added ShowGridLines test.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added DefinitionOffset test.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Expanded GridPropertiesCauseLayoutChanges test.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added StarSizing test.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added GridPropertiesCauseLayoutChanges test.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Switched to Microsoft buttons in some tests.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added or expanded tests.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added or expanded a few tests.
	* DefinitionBaseTest.cs: Added.

2007-06-20  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added.

2007-06-18  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs, TabItemTest.cs: Added more tests.

2007-06-17  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added TabStripPlacementPropertyChangedCallback test.
	* TabItemTest.cs: Added IsSelectedSimplified, TabStripPlacementBinding tests.

2007-06-15  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItemTest.cs: Added IsSelected and following tests.

2007-06-14  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added OnApplyTemplateAddsItemsToTabPanel test.

2007-06-14  George Giolfan  <georgegiolfan@yahoo.com>

	* PanelTest.cs: Added IsItemsHost-related tests.
