@@ -1,3 +1,7 @@
+2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* GridTest.cs: Added or expanded tests.
+
 2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* GridTest.cs: Added ChangingDefinitionsCauseMeasure* tests.
